# hypruler

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
.claude/commands/: docs.md
.github/workflows/: release.yml
aur/: PKGBUILD.template
src/: capture.rs  edge_detection.rs  main.rs  render.rs  ui.rs  wayland_handlers.rs
