[package]
name = "hypruler"
version = "0.2.1"
edition = "2024"
description = "Measure anything on your screen. Built for Linux."
license = "MIT"
repository = "https://github.com/t4t5/hypruler"

[dependencies]
smithay-client-toolkit = "0.20"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
tiny-skia = "0.11"
fontdue = "0.9"
memmap2 = "0.9"
rustix = { version = "1.0", features = ["fs", "shm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
